--- a/src/App.css
+++ b/src/App.css
@@ -34,5 +34,15 @@
   justify-content: center;
   align-content: center;
   align-items: center;
+}
+body{
+  background-color: rgb(0, 255, 242);
+}
 
+.addmovie{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  max-width: 500px;
+  margin: 10px auto;
 }
