--- a/src/App.css
+++ b/src/App.css
@@ -29,15 +29,13 @@
   justify-items: center;
 }
 .button{
-  display: grid;
-  flex-direction: column;
-  justify-content: center;
+  display: flex;
   align-content: center;
   align-items: center;
 }
-body{
+/* body{
   background-color: rgb(0, 255, 242);
-}
+} */
 
 .addmovie{
   display: flex;
@@ -45,4 +43,16 @@ body{
   gap: 5px;
   max-width: 500px;
   margin: 10px auto;
+}
+.game{
+  height: 150px;
+  width: 150px;
+  border: 2px solid black;
+  font-size: 160px;
+  font-weight: bold;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
