--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 }
 .movie-container{
   width: 200px;
+  height: min-content;
 }
 .flex{
   display: flex;
@@ -17,10 +18,11 @@
 .movie-name{
   margin: 0px;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 15px;
 }
 .movie-summary{
   margin: 0px;
+  font-size: 13px;
 }
 .movie-list{
   display: grid;
@@ -44,15 +46,26 @@
   max-width: 500px;
   margin: 10px auto;
 }
-.game{
-  height: 150px;
-  width: 150px;
-  border: 2px solid black;
-  font-size: 160px;
-  font-weight: bold;
+.boxes{
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  font-size: 50px;
 
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
+}
+.boxes:hover{
+  background-color: aqua;
+}
+.board{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  width: min-content;
+  margin: 0 auto;
+}
+.tic{
+  text-align: center;
 }
