--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,10 @@ body{
   margin: 10px auto;
 }
 .boxes{
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   border: 1px solid black;
-  font-size: 50px;
-
-
+  font-size: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,6 +85,9 @@ body{
 .back{
   margin: 10px auto;
 }
-.mode{
+#mode{
+  margin-left: auto;
+}
+.delete{
   margin-left: auto;
 }
